<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackground"
    tools:context=".StudentDetailsActivity">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Title "Student Details" -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_details_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Student's Image -->
    <ImageView
        android:id="@+id/studentRowImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/sheep" />

    <!-- Student Name -->
    <TextView
        android:id="@+id/nameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/student_name_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/nameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentRowImageView" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameLabelTextView" />

    <!-- Student ID -->
    <TextView
        android:id="@+id/idLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/nameLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/nameLabelTextView"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@id/idTextView"/>

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/idLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/idLabelTextView" />

    <!-- Student Phone -->
    <TextView
        android:id="@+id/phoneLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_heading"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/idLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/idLabelTextView"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@id/phoneTextView"
        />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/phoneLabelTextView" />

    <!-- Student Address -->
    <TextView
        android:id="@+id/addressLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_heading"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/phoneLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/phoneLabelTextView"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@id/addressTextView"/>

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/addressLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addressLabelTextView" />

    <!-- Checkbox -->
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="91dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/checked"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/addressLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/addressLabelTextView" />

    <!-- Edit Button -->
    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
